[package]
name = "hm-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
poise = "0.5.7" # https://github.com/serenity-rs/poise
tracing = "0.1.40" # https://github.com/tokio-rs/tracing
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "mysql",
    "migrate",
    "time"
] } # https://github.com/launchbadge/sqlx
redis = { version = "0.24.0", features = [
    "tokio-comp",
] } # https://github.com/redis-rs/redis-rs
sha1 = "0.10.6"
hex = "0.4.3"
serial_test = "2.0.0"
time = "0.3.31"
