[package]
name = "hm-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1" # https://github.com/serenity-rs/poise
futures = "0.3"
itertools = "0.12"
tracing = "0.1.40" # https://github.com/tokio-rs/tracing
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
tracing-appender = "0.2.3"
rolling-file = "0.2.0"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "mysql",
    "migrate",
    "time",
    "tls-native-tls"
] } # https://github.com/launchbadge/sqlx
redis = { version = "0.24.0", features = [
    "tokio-comp",
] } # https://github.com/redis-rs/redis-rs
sha1 = "0.10.6"
hex = "0.4.3"
serial_test = "3.0.0"
time = "0.3.34"
once_cell = "1.19.0"
dotenvy = "0.15.7"
